DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Date__c</fullName>
    <inlineHelpText>Identifies the latest End Date of Actions within Milestones relating to this Phase</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>