DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Hours_Completed_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
    <inlineHelpText>Identifies the Completed Cost Value of all Actions relating to Milestones within this Phase</inlineHelpText>
    <label>Hours Completed Value (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>