DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Hours_Remaining_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the number of Non Billable Hours Remaining on all Actions relating to Milestones within this Phase</inlineHelpText>
    <label>Hours Remaining - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>