DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Hours_Scheduled_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Billable__c</fullName>
    <inlineHelpText>Identifies the number of Billable Hours Scheduled on all Actions relating to Milestones within this Phase</inlineHelpText>
    <label>Hours Scheduled - Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>