DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Projected_Total_Hours_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Total_Hours_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the total projected number of Non Billable Hours on all Actions relating to Milestones within this Phase</inlineHelpText>
    <label>Projected Total Hours - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>