DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Start_Date__c</fullName>
    <inlineHelpText>Identifies the earliest Start Date of Actions within Milestones relating to this Phase</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>