DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Total_Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Hours_Completed__c</fullName>
    <formula>amc__Hours_Completed_Billable__c + amc__Hours_Completed_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of ‘Hours Completed - Billable’ + &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
    <label>Total Hours Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>