DigicielFull/force-app/main/default/objects/amc__Phase__c/fields/amc__Total_Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Hours_Scheduled__c</fullName>
    <formula>amc__Hours_Scheduled_Billable__c + amc__Hours_Scheduled_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Sum of ‘Hours Scheduled - Billable’ + &apos;Hours Scheduled - Non Billable&apos;</inlineHelpText>
    <label>Total Hours Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>